--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -1,1 +1,9 @@
-@import 'bootstrap/scss/bootstrap';
+@import "bootstrap/scss/bootstrap";
+
+body {
+  background-color: orange;
+}
+
+#nickname-form {
+  margin-top: 30vh;
+}
