moved code to avoid conflict

--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -1,4 +1,28 @@
 @import 'bootstrap/scss/bootstrap';
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//flytta upp importer
 @import 'variables';
 @import 'layout';
