new branch fixed roundes

--- a/frontend/src/assets/scss/_layout.scss
+++ b/frontend/src/assets/scss/_layout.scss
@@ -70,6 +70,10 @@ body {
   margin-top: 0vh;
 }
 
+#round{
+  text-align: center;
+}
+
 #game-wrapper {
   display: flex;
   justify-content: center;
