--- a/frontend/src/assets/scss/_layout.scss
+++ b/frontend/src/assets/scss/_layout.scss
@@ -25,6 +25,7 @@ body {
   width: 25em;
   justify-content: center;
   align-items: center;
+  padding: 1 rem;
 }
 
 #connectBtn {
@@ -80,6 +81,8 @@ body {
   font-size: 6em;
   text-shadow: 2px 2px 0 #00FF00;
   color: blue;
+
+  
 }
 
 #round{
@@ -179,3 +182,29 @@ body {
   height: 50px;
   cursor: pointer;
 }
+
+.content-wrapper {
+  display: flex;
+  align-items: start;
+  gap: 60px; 
+  padding: 1rem ;
+
+}
+
+#highscoreContainer {
+  max-width: 400px; 
+  border: 5px dotted #538e4e;
+  text-align: center;
+
+}
+
+#highscoreList, #matchHistoryList {
+  list-style-type: none; 
+  padding: 0;
+}
+
+#highscoreList li, #matchHistoryList li {
+  padding: 5px 0;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
