css for highscore

--- a/frontend/src/assets/scss/_layout.scss
+++ b/frontend/src/assets/scss/_layout.scss
@@ -94,6 +94,7 @@ body {
   justify-content: center;
   align-items: center;
   padding-bottom: 100px;
+  padding: 10%;
 }
 
 #gameBoard {
@@ -192,8 +193,9 @@ body {
 }
 
 #highscoreContainer {
-  max-width: 400px; 
-  border: 5px dotted #538e4e;
+  max-width: 300px; 
+  border: 5px solid green;
+  background-color: lightgrey;
   text-align: center;
 
 }
@@ -201,10 +203,46 @@ body {
 #highscoreList, #matchHistoryList {
   list-style-type: none; 
   padding: 0;
+  max-height: 200px; 
+  overflow-y: auto; 
+  padding: 0; 
+  margin: 0; 
 }
 
 #highscoreList li, #matchHistoryList li {
   padding: 5px 0;
   font-family:Verdana, Geneva, Tahoma, sans-serif;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
+.parent {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  height: 100vh; 
+  position:absolute;
+  top: -10%;
+  right: 6rem;
+  
+}
+
+h3 {
+  color: rgb(3, 37, 255);
+  font-weight:bolder;
+}
+
+
+@media (min-width: 768px) {
+  #highscoreList, #matchHistoryList {
+    max-height: 200px; 
+
+  }
+}
+
+/* Desktop */
+@media (min-width: 1024px) {
+  #highscoreList, #matchHistoryList {
+    max-height: 250px; 
+  }
+}
