--- a/frontend/src/assets/scss/_layout.scss
+++ b/frontend/src/assets/scss/_layout.scss
@@ -7,9 +7,9 @@ body {
   background-color: $bg-color;
 }
 
-// .hide {
-//   display: none;
-// }
+.hide {
+  display: none;
+}
 
 //nicknamevy
 
@@ -211,6 +211,16 @@ button {
 button:hover {
   background-color: rgb(255, 255, 255);
   border: 2px solid greenyellow
+}
+
+#gif-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  object-fit: contain;
 }
 
 
